# MADMariadbUDF

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  install.sql  uninstall.sql
cmake/Modules/: CodeCoverage.cmake  FindMySQL.cmake
include/: catch.hpp  common.hpp  mad.hpp  outliers.hpp  quantile.hpp
src/: mad.cpp  mad_test.cpp  mad_udf.cpp  median_udf.cpp  outliers_udf.cpp  quantile_udf.cpp
tests/: mad_test.cpp  mariadb_test.sh  outliers_test.cpp  quantile_test.cpp  test.sql
